# warehouse

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  entrypoint.sh  main.py  planning.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/api/v1/: products.py
src/core/: database.py  settings.py
src/domain/: models.py
src/repository/: product_repository.py
src/schemas/: product.py
src/scripts/: init_db.sql  seed.ipynb  seed.py  test_connection.ipynb
src/services/: product_service.py
tests/: conftest.py  relatorio.html  test_products.py
