[project]
name = "fastapi-products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "sqlmodel>=0.0.8",
    "databases[sqlite]>=0.7.3",
    "pydantic>=2.5.2",
    "httpx>=0.24.1",
    "pytest-asyncio>=1.2.0",
]
